--- a/style.css
+++ b/style.css
@@ -130,3 +130,16 @@ h1{
     }
 }
     
+.panel-footer
+        {
+          position:fixed;
+          bottom:0;
+          width:100%;
+          text-align:center;
+          background-color: #51662A;
+          color:white;
+          text-shadow:2px 1.5px #A99B3A;
+          font-family: 'Bangers', cursive;
+          font-family: 'Abril Fatface', cursive;
+          font-family: 'Lemon', cursive;
+        }
